--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "accordion-collapse-react-native": "^1.1.1",
     "add": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-multiple-select": "^0.5.12",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^3.4.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-squish-button": "^0.3.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
